# switchfin

./: .gitignore  CMakeLists.txt  LICENSE.md  readme.md
cmake/: SwitchTools.cmake
cmake/Switch/: FindLibnx.cmake
cmake/toolchains/: DevkitA64Libnx.cmake
lib/: CMakeLists.txt
lib/gana/: App.cpp  App.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  DebugScreen.cpp  DebugScreen.hpp  Logger.cpp  Logger.hpp  Logger.inl
lib/gana/network/: Http.cpp  Http.hpp  Request.cpp  Request.hpp
lib/gana/switch/: swkbd.cpp  swkbd.hpp
lib/gana/theme/: color.hpp
lib/gana/type/: Color.cpp  Color.hpp  Event.cpp  Event.hpp  FPSClock.cpp  FPSClock.hpp  Rect.hpp  Rect.inl  Signal.hpp  Signal.inl  SwitchPadButton.hpp  Vector2.hpp  Vector2.inl
lib/gana/type/gradient/: Gradient.hpp  LinearGradient.cpp  LinearGradient.hpp  RadialGradient.cpp  RadialGradient.hpp
lib/gana/ui/: BGRectContainer.cpp  BGRectContainer.hpp  BaseButton.cpp  BaseButton.hpp  BaseLabel.cpp  BaseLabel.hpp  Button.cpp  Button.hpp  ColorRect.cpp  ColorRect.hpp  GradientColorRect.cpp  GradientColorRect.hpp  Image.cpp  Image.hpp  Label.cpp  Label.hpp  LineEdit.cpp  LineEdit.hpp  MPVPlayer.cpp  MPVPlayer.hpp  MultiLineLabel.cpp  MultiLineLabel.hpp  NavigationManager.cpp  NavigationManager.hpp  NetworkImage.cpp  NetworkImage.hpp  Node.cpp  Node.hpp  Node.inl  RectContainer.cpp  RectContainer.hpp  ScrollView.cpp  ScrollView.hpp  TextureButton.cpp  TextureButton.hpp  Timer.cpp  Timer.hpp
lib/gana/ui/box_container/: HBoxContainer.cpp  HBoxContainer.hpp  VBoxContainer.cpp  VBoxContainer.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/nanovg/: CMakeLists.txt
lib/simpleini/: SimpleIni.hpp
script/: app.py
src/: Switchfin.cpp  Switchfin.hpp  config.hpp  main.cpp
src/network/: Http.cpp  Http.hpp  JellyfinClient.cpp  JellyfinClient.hpp  LoginRequest.cpp  LoginRequest.hpp  PingRequest.cpp  PingRequest.hpp  PingResponse.cpp  PingResponse.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  http.cpp
src/network/item/: Item.cpp  Item.hpp  ItemListRequest.cpp  ItemListRequest.hpp  ItemRequest.cpp  ItemRequest.hpp  Items.cpp  Items.hpp  ItemsRequest.cpp  ItemsRequest.hpp  UserData.cpp  UserData.hpp  duration.cpp  duration.hpp  item_type.hpp
src/ui/: ServerSelect.cpp  ServerSelect.hpp
src/ui/home/: BigMovieVignette.cpp  BigMovieVignette.hpp  Home.cpp  Home.hpp  LatestView.cpp  LatestView.hpp  MediaVignette.cpp  MediaVignette.hpp  ProgressBar.cpp  ProgressBar.hpp  SmallMovieVignette.cpp  SmallMovieVignette.hpp
src/ui/login/: Login.cpp  Login.hpp  ServerAddress.cpp  ServerAddress.hpp  ServerSelect.cpp  ServerSelect.hpp
src/ui/movie_detail/: EpisodeDetail.cpp  EpisodeDetail.hpp  EpisodeVignette.cpp  EpisodeVignette.hpp  Genre.cpp  Genre.hpp  MediaList.cpp  MediaList.hpp  MovieDetail.cpp  MovieDetail.hpp  PlayButton.cpp  PlayButton.hpp  PlayButtonContainer.cpp  PlayButtonContainer.hpp  SeasonDetail.cpp  SeasonDetail.hpp  SeasonVignette.cpp  SeasonVignette.hpp  SerieDetail.cpp  SerieDetail.hpp
src/ui/player/: BackButton.cpp  BackButton.hpp  Player.cpp  Player.hpp  Slider.cpp  Slider.hpp
